# lambda-otel-logging

./: README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
src/lambda_otel_logging/: logging.py
tests/: test_logging.py
