[project]
name = "lambda-otel-logging"
version = "0.1.0"
description = "Python logging formatter that looks like OpenTelemetry logs"
readme = "README.md"
authors = [
    { name = "Bram Neijt", email = "bram@neijt.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "msgspec>=0.19.0",
    "opentelemetry-sdk>=1.36.0",
]

[project.scripts]
lambda-otel-logging = "lambda_otel_logging:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
